RESOLVED FIXED172345
REGRESSION(r216977): [GTK] Ephemeral sessions broken after r216977
https://bugs.webkit.org/show_bug.cgi?id=172345
Summary REGRESSION(r216977): [GTK] Ephemeral sessions broken after r216977
Carlos Garcia Campos
Reported 2017-05-18 23:48:48 PDT
Since r216977, WebProcessPool sends the page session ID to the web process, but the WebsiteDataStoreParameters session ID to the network process. WebsiteDataStoreParameters is only implemented for Cocoa, so we are sending 0 session ID to the network process, while using the right session ID everywhere else. $ MiniBrowser -p Attempted to create a NetworkLoad with a session (id=9223372036854775810) that does not exist. This has also broken two unit tests.
Attachments
Patch (2.76 KB, patch)
2017-05-18 23:52 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-05-18 23:52:27 PDT
Michael Catanzaro
Comment 2 2017-05-19 09:04:20 PDT
Comment on attachment 310625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=310625&action=review Glad the API tests caught this. Technically you need an owner to approve the cross-platform assertion, but since it's one line I assume you can get approval on IRC on something. > Source/WebKit2/UIProcess/WebsiteData/WebsiteDataStore.cpp:1302 > + // FIXME: Implement cookies. What needs to happen here?
Carlos Garcia Campos
Comment 3 2017-05-19 09:11:44 PDT
Note You need to log in before you can comment on or make changes to this bug.